--- a/covid19.html
+++ b/covid19.html
@@ -72,8 +72,11 @@
                            </li>
                          
                            <li class="nav-item ">
-                            <a class="nav-link active" href="videoKYC.html">Video KYC</a>
+                            <a class="nav-link" href="videoKYC.html">Video KYC</a>
                          </li>
+                         <li class="nav-item ">
+                           <a class="nav-link active" href="videoKYC.html">COVID19</a>
+                        </li>
                            <li class="nav-item ">
                               <a class="nav-link " href="about-us.html">Company</a>
                            </li>
