--- a/covid19.html
+++ b/covid19.html
@@ -22,6 +22,11 @@
       <link rel="stylesheet" href="css/responsive.css">
       <!-- Animation CSS for headline -->
       <link rel="stylesheet" href="css/animation.css">
+      <style>
+      h1{
+         font-size: 3em !important;
+      }
+      </style>
    </head>
    <body>
       <!-- loading -->
@@ -131,21 +136,21 @@
                <div class="row">
                   <div class="col-sm-12">
                      <!-- <div style="width:100%"><img style="width:100%;"src="./images/banner/collage.jpg"></div> -->
-                     <div class="about-content mt-5">
+                     <div class="about-content">
                         <div style="margin-top:0px;" id="values" class="mb-0">
-                           <div class="row mt-5 pt-3">
+                           <div class="row">
                                <!-- <div class="title-box">
                                     <h2 class="title-light text-dark"><span>RBI Compliant Video KYC Solution</span></h2>
                                  </div> -->
                                  
                               <div class="col-lg-6 col-md-12">                   
-                                 <p class="mt-4">We are committed to support organisations involved in COVID-19 relief efforts; if you are a non profit, hospital, school or university or an SME delivering essentials- Invoid can help you establish trust and verify identities remotely.
+                                 <p class="">We are committed to support organisations involved in COVID-19 relief efforts; if you are a non profit, hospital, school or university or an SME delivering essentials- Invoid can help you establish trust and verify identities remotely.
                                     <h4>Why now?</h4>
                                     With social distancing becoming the norm; having a physical interaction is increasingly difficult and dangerous during such challenging times- we want to help businesses and honest entrepreneurs by enabling them to onboard users instantly while maintaining high standards of security.
                                     <h4>How to apply?</h4>
                                     Submit a few details about your company and our team will review your application and reach out to your for the next steps
                               </div>
-                            <div style="padding-left:10px;" class="col-lg-6 col-md-12 r-mt3">
+                            <div style="padding-left:10px;" class="col-lg-6 col-md-12 r-mt3 mt-4">
                                 <div>
                                     <img class="img-fluid top-img1 i-size" src="images/banner/post_3.jpg" alt="image">
                                  </div>
