--- a/covid19.html
+++ b/covid19.html
@@ -144,7 +144,7 @@
                                  </div> -->
                                  
                               <div class="col-lg-6 col-md-12">                   
-                                 <p class="">We are committed to support organisations involved in COVID-19 relief efforts; if you are a non profit, hospital, school or university or an SME delivering essentials- Invoid can help you establish trust and verify identities remotely.
+                                 <p class="">We are committed to support organisations involved in COVID-19 relief efforts; if you are a non profit, hospital, school or university or an SME helping in relief efforts- Invoid can help you establish trust and verify identities remotely.
                                     <h4>Why now?</h4>
                                     With social distancing becoming the norm; having a physical interaction is increasingly difficult and dangerous during such challenging times- we want to help businesses and honest entrepreneurs by enabling them to onboard users instantly while maintaining high standards of security.
                                     <h4>How to apply?</h4>
@@ -181,8 +181,10 @@
                            <div class="row justify-content-md-center mt-5">
                               <div class="col-lg-8 col-md-12 text-center">
                                  <div class="title-box">
-                                    <a class="typeform-share button" href="https://sarthak217564.typeform.com/to/Ij9He1" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#0658B5;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:17px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="0" target="_blank">Apply now </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
-                            
+                                    <a class="typeform-share button" href="https://sarthak217564.typeform.com/to/Ij9He1" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#0658B5;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:17px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;" data-submit-close-delay="0" target="_blank">Apply now </a> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script><br>
+                                    <h6>Valid till June 2020</h6>
+                                    <h6>Applicable Services are limited</h6>
+
                                  </div>
                               </div>
                            </div>
